--- a/Questions/Question1/Question1.Rmd
+++ b/Questions/Question1/Question1.Rmd
@@ -1,98 +1,47 @@
 ---
-# IMPORTANT: Change settings here, but DO NOT change the spacing.
-# Remove comments and add values where applicable.
-# The descriptions below should be self-explanatory
-
-title: "Helping You Write Academic Papers in R using Texevier"
-#subtitle: "This will appear as Right Header"
-
-documentclass: "elsarticle"
-
-# --------- Thesis title (Optional - set to FALSE by default).
-# You can move the details below around as you please.
-Thesis_FP: FALSE
-# Entry1: "An unbelievable study with a title spanning multiple lines."
-# Entry2: "\\textbf{Some Guy}" # textbf for bold
-# Entry3: "A thesis submitted toward the degree of Doctor of Philosophy"
-# Uni_Logo: Tex/Logo.png # Place a logo in the indicated location (from your root, e.g. defaults to ~/Tex/Logo.png) and uncomment this line. Leave uncommented for no image
-# Logo_width: 0.3 # If using a logo - use this to set width (size) of image
-# Entry4: "Under the supervision of: \\vfill Prof. Joe Smith and Dr. Frank Smith"
-# Entry5: "Stellenbosch University"
-# Entry6: April 2020
-# Entry7:
-# Entry8:
-
-# --------- Front Page
-# Comment: ----- Follow this pattern for up to 5 authors
-AddTitle: TRUE # Use FALSE when submitting to peer reviewed platform. This will remove author names.
-Author1: "Jane Doe^[__Contributions:__  \\newline _The authors would like to thank no institution for money donated to this project. Thank you sincerely._]"  # First Author - note the thanks message displayed as an italic footnote of first page.
-Ref1: "Some Institution, Cape Town, South Africa" # First Author's Affiliation
-Email1: "nfkatzke\\@gmail.com" # First Author's Email address
-
-Author2: "John Smith"
-Ref2: "Some other Institution, Cape Town, South Africa"
-Email2: "John\\@gmail.com"
-CommonAffiliation_12: TRUE # If Author 1 and 2 have a common affiliation. Works with _13, _23, etc.
-
-Author3: "John Doe"
-Email3: "Joe\\@gmail.com"
-
-CorrespAuthor_1: TRUE  # If corresponding author is author 3, e.g., use CorrespAuthor_3: TRUE
-
-# Comment out below to remove both. JEL Codes only given if keywords also given.
-keywords: "Multivariate GARCH \\sep Kalman Filter \\sep Copula" # Use \\sep to separate
-JELCodes: "L250 \\sep L100"
-
-# ----- Manage headers and footers:
-#BottomLFooter: $Title$
-#BottomCFooter:
-#TopLHeader: \leftmark # Adds section name at topleft. Remove comment to add it.
-BottomRFooter: "\\footnotesize Page \\thepage" # Add a '#' before this line to remove footer.
-addtoprule: TRUE
-addfootrule: TRUE               # Use if footers added. Add '#' to remove line.
-
-# --------- page margins:
-margin: 2.3 # Sides
-bottom: 2 # bottom
-top: 2.5 # Top
-HardSet_layout: TRUE # Hard-set the spacing of words in your document. This will stop LaTeX squashing text to fit on pages, e.g.
-# This is done by hard-setting the spacing dimensions. Set to FALSE if you want LaTeX to optimize this for your paper.
-
-# --------- Line numbers
-linenumbers: FALSE # Used when submitting to journal
-
-# ---------- References settings:
-# You can download cls format here: https://www.zotero.org/ - simply search for your institution. You can also edit and save cls formats here: https://editor.citationstyles.org/about/
-# Hit download, store it in Tex/ folder, and change reference below - easy.
-bibliography: Tex/ref.bib       # Do not edit: Keep this naming convention and location.
-csl: Tex/harvard-stellenbosch-university.csl # referencing format used.
-# By default, the bibliography only displays the cited references. If you want to change this, you can comment out one of the following:
-#nocite: '@*' # Add all items in bibliography, whether cited or not
-# nocite: |  # add specific references that aren't cited
-#  @grinold2000
-#  @Someoneelse2010
-
-# ---------- General:
-RemovePreprintSubmittedTo: TRUE  # Removes the 'preprint submitted to...' at bottom of titlepage
-Journal: "Journal of Finance"   # Journal that the paper will be submitting to, if RemovePreprintSubmittedTo is set to TRUE.
-toc: FALSE                       # Add a table of contents
-numbersections: TRUE             # Should sections (and thus figures and tables) be numbered?
-fontsize: 11pt                  # Set fontsize
-linestretch: 1.2                # Set distance between lines.
-link-citations: TRUE            # This creates dynamic links to the papers in reference list.
-
-### Adding additional latex packages:
-# header-includes:
-#    - \usepackage{colortbl} # Add additional packages here.
-
+title: "Question 1: Systematic AI Fund"
+documentclass: elsarticle
+Thesis_FP: false
 output:
   pdf_document:
-    keep_tex: TRUE
+    keep_tex: true
     template: Tex/TexDefault.txt
-    fig_width: 3.5 # Adjust default figure sizes. This can also be done in the chunks of the text.
+    fig_width: 3.5
     fig_height: 3.5
-abstract: |
-  Abstract to be written here. The abstract should not be too long and should provide the reader with a good understanding what you are writing about. Academic papers are not like novels where you keep the reader in suspense. To be effective in getting others to read your paper, be as open and concise about your findings here as possible. Ideally, upon reading your abstract, the reader should feel he / she must read your paper in entirety.
+  html_document:
+    df_print: paged
+Author1: Vincent Reinshagen
+Ref1: Stellenbosch University
+Email1: 28736907@sun.ac.za
+# Author2: John Smith
+# Ref2: Some other Institution, Cape Town, South Africa
+# Email2: John\@gmail.com
+# CommonAffiliation_12: true
+# Author3: John Doe
+# Email3: Joe\@gmail.com
+# CorrespAuthor_1: true
+# keywords: Multivariate GARCH \sep Kalman Filter \sep Copula
+# JELCodes: L250 \sep L100
+# BottomRFooter: \footnotesize Page \thepage
+addtoprule: true
+addfootrule: true
+margin: 2.3
+bottom: 2
+top: 2.5
+HardSet_layout: true
+linenumbers: false
+bibliography: Tex/ref.bib
+csl: "Tex/harvard-stellenbosch-university.csl"
+RemovePreprintSubmittedTo: true
+Journal: Journal of Finance
+toc: false
+numbersections: true
+fontsize: 11pt
+linestretch: 1.2
+link-citations: true
+AddTitle: true
+#abstract: |
+  # Abstract to be written here. The abstract should not be too long and should provide the reader with a good understanding what you are writing about. Academic papers are not like novels where you keep the reader in suspense. To be effective in getting others to read your paper, be as open and concise about your findings here as possible. Ideally, upon reading your abstract, the reader should feel he / she must read your paper in entirety.
 ---
 
 <!-- First: Set your default preferences for chunk options: -->
@@ -108,9 +57,8 @@ knitr::opts_chunk$set(echo = FALSE, message = FALSE, warning = FALSE, fig.width 
 # Lets load in example data, and see how this can be stored and later called from your 'data' folder.
 if(!require("tidyverse")) install.packages("tidyverse")
 library(tidyverse)
-ASISA <- read_rds("/Users/x/Downloads/28736907_Fin_Metrics/Questions/Question1/data/ASISA_Rets.rds")
-BM <- read_rds("/Users/x/Downloads/28736907_Fin_Metrics/Questions/Question1/data/Capped_SWIX.rds")
-AI_Funds <- read_rds("/Users/x/Downloads/28736907_Fin_Metrics/Questions/Question1/data/AI_Max_Fund.rds")
+list.files('code/', full.names = T, recursive = T) %>% as.list() %>% walk(~source(.))
+library(tbl2xts)
 
 # Notice that as you are working in a .Rproj file (I am assuming you are) - the relative paths of your directories start at your specified root.
 # This means that when working in a .Rproj file, you never need to use getwd() - it is assumed as your base root automatically.
@@ -123,9 +71,14 @@ AI_Funds <- read_rds("/Users/x/Downloads/28736907_Fin_Metrics/Questions/Question
 <!-- # Start Writing here: -->
 <!-- ############################## -->
 
-# Introduction \label{Introduction}
 
-Load data, transform to xts format, and combine in one dataset for easier work
+
+
+```{r}
+ASISA <- read_rds("/Users/x/Downloads/28736907_Fin_Metrics/Questions/Question1/data/ASISA_Rets.rds")
+BM <- read_rds("/Users/x/Downloads/28736907_Fin_Metrics/Questions/Question1/data/Capped_SWIX.rds")
+AI_Funds <- read_rds("/Users/x/Downloads/28736907_Fin_Metrics/Questions/Question1/data/AI_Max_Fund.rds")
+```
 
 
 ```{r}
@@ -143,60 +96,43 @@ colnames(merged) <- c("AI_Fund", "Managed_Funds", "Benchmark")
 
 ```
 
-Combined data frame allows to plot the cumulative returns of Managed funds, the AI fund 
-and the benchmark fund to compare the cumulative performance
+I will start my analysis using the PerfomanceAnalytics package, to make use of this package, it is necessary to spread the data. Since we also want to compare the AI Fund to managed funds, I created the function mean_A which calculates the returns across all funds for each date. The format of the three datasets now allows to merge them. Furthermore, the columns are renamed for clarity. The merged dataset can then be used to plot a cumulative return chart.
+
+The plot shows, that the AI Fund (black line) shows a notably higher cumulative return compared to the Benchmark (green line) and Managed Funds (red line). The Managed Funds perform consistently below both the Benchmark and AI Fund over time.
 
 ```{r}
 chart.CumReturns(merged, legend.loc = 1)
 ```
 
 After calculating cumulative returns to assess overall performance, rolling returns are analyzed to evaluate consistency and resilience over different time periods, addressing potential biases from early outcomes or isolated events. 
-Again, I will use the PerformanceAnalytics package, to calculate 3 year rolling returns.
+
+This plot aligns with the general conclusions from the previous plot but provides a more granular view of short-term performance trends over time.
+
+While the previous chart highlighted the AI Fund's superior cumulative returns, this chart shows that the AI Fund's rolling 12-month returns are more volatile but still consistently outperform the Benchmark and Managed Funds over longer periods. The AI Fund exhibits higher peaks and lower troughs compared to the others, suggesting higher risk but also higher reward. Managed Funds consistently exhibit lower volatility and returns, staying below the AI Fund and often below the Benchmark.
 
 ```{r}
 chart.RollingPerformance(merged, 36, legend.loc = 3)
 ```
 
-
+This density plot complements the earlier findings: The AI Fund (red) has a broader and flatter distribution, indicating higher variance and a wider range of returns. Its mean is higher than both the Benchmark and Managed Funds, reinforcing its superior performance over time. The Managed Funds (blue) show a narrower distribution, reflecting lower variability in returns. However, its mean is the lowest among the three datasets, confirming its consistent underperformance relative to the AI Fund and the Benchmark.The Benchmark (green) displays a middle ground, with a tighter distribution compared to the AI Fund but slightly wider than the Managed Funds. Its mean return is higher than Managed Funds but below the AI Fund.
 
 ```{r}
 density_plot(merged, 36)
 ```
-Lets look at the risk and the volatility of the different funds, start of with the
-rolling standard deviation
+
+The density plot with variances confirms that the AI Fund, while offering higher returns, also comes with increased risk compared to the other two datasets. Managed Funds provide the most stability but underperform in terms of both returns and risk-adjusted performance.
 
 ```{r}
 density_plot_var(merged, 36)
 ```
 
 Rolling plot already shows lowest variance for Managed funds, and highest variance for AI fund
-Lets look at the downside deviation which measures the risk of an investment by calculating the standard deviation of negative returns below a defined threshold.
+The drawdown chart emphasizes the AI Fund's greater susceptibility to sharp declines, despite its long-term outperformance.
 
 ```{r}
 DownsideDeviation(merged, 0)
 chart.Drawdown(merged, legend.loc = 3)
 ```
 
-We can see that the AI funds downside deviation is more thandouble as high as the Managed funds,
-and slightly higher than benchmark. Lets visualize.
-
-```{r}
-chart.Drawdown(merged, legend.loc = 3)
-```
-
-
-\newpage
-
-# References {-}
-
-<div id="refs"></div>
-
-
-# Appendix {-}
-
-## Appendix A {-}
-
-Some appendix information here
-
-## Appendix B {-}
+The analysis highlights that the AI Fund consistently outperforms both the Benchmark and Managed Funds in terms of returns, albeit with higher volatility and deeper drawdowns. While Managed Funds offer lower risk and more stability, they underperform in both mean and cumulative returns. The Benchmark provides a moderate balance of risk and performance but cannot match the AI Fund's long-term growth. This suggests the AI Fund is better suited for risk-tolerant investors seeking higher returns, while Managed Funds cater to more conservative strategies.
 
