--- a/Questions/Question3/Question3.Rmd
+++ b/Questions/Question3/Question3.Rmd
@@ -1,98 +1,34 @@
 ---
-# IMPORTANT: Change settings here, but DO NOT change the spacing.
-# Remove comments and add values where applicable.
-# The descriptions below should be self-explanatory
-
-title: "Helping You Write Academic Papers in R using Texevier"
-#subtitle: "This will appear as Right Header"
-
-documentclass: "elsarticle"
-
-# --------- Thesis title (Optional - set to FALSE by default).
-# You can move the details below around as you please.
-Thesis_FP: FALSE
-# Entry1: "An unbelievable study with a title spanning multiple lines."
-# Entry2: "\\textbf{Some Guy}" # textbf for bold
-# Entry3: "A thesis submitted toward the degree of Doctor of Philosophy"
-# Uni_Logo: Tex/Logo.png # Place a logo in the indicated location (from your root, e.g. defaults to ~/Tex/Logo.png) and uncomment this line. Leave uncommented for no image
-# Logo_width: 0.3 # If using a logo - use this to set width (size) of image
-# Entry4: "Under the supervision of: \\vfill Prof. Joe Smith and Dr. Frank Smith"
-# Entry5: "Stellenbosch University"
-# Entry6: April 2020
-# Entry7:
-# Entry8:
-
-# --------- Front Page
-# Comment: ----- Follow this pattern for up to 5 authors
-AddTitle: TRUE # Use FALSE when submitting to peer reviewed platform. This will remove author names.
-Author1: "Jane Doe^[__Contributions:__  \\newline _The authors would like to thank no institution for money donated to this project. Thank you sincerely._]"  # First Author - note the thanks message displayed as an italic footnote of first page.
-Ref1: "Some Institution, Cape Town, South Africa" # First Author's Affiliation
-Email1: "nfkatzke\\@gmail.com" # First Author's Email address
-
-Author2: "John Smith"
-Ref2: "Some other Institution, Cape Town, South Africa"
-Email2: "John\\@gmail.com"
-CommonAffiliation_12: TRUE # If Author 1 and 2 have a common affiliation. Works with _13, _23, etc.
-
-Author3: "John Doe"
-Email3: "Joe\\@gmail.com"
-
-CorrespAuthor_1: TRUE  # If corresponding author is author 3, e.g., use CorrespAuthor_3: TRUE
-
-# Comment out below to remove both. JEL Codes only given if keywords also given.
-keywords: "Multivariate GARCH \\sep Kalman Filter \\sep Copula" # Use \\sep to separate
-JELCodes: "L250 \\sep L100"
-
-# ----- Manage headers and footers:
-#BottomLFooter: $Title$
-#BottomCFooter:
-#TopLHeader: \leftmark # Adds section name at topleft. Remove comment to add it.
-BottomRFooter: "\\footnotesize Page \\thepage" # Add a '#' before this line to remove footer.
-addtoprule: TRUE
-addfootrule: TRUE               # Use if footers added. Add '#' to remove line.
-
-# --------- page margins:
-margin: 2.3 # Sides
-bottom: 2 # bottom
-top: 2.5 # Top
-HardSet_layout: TRUE # Hard-set the spacing of words in your document. This will stop LaTeX squashing text to fit on pages, e.g.
-# This is done by hard-setting the spacing dimensions. Set to FALSE if you want LaTeX to optimize this for your paper.
-
-# --------- Line numbers
-linenumbers: FALSE # Used when submitting to journal
-
-# ---------- References settings:
-# You can download cls format here: https://www.zotero.org/ - simply search for your institution. You can also edit and save cls formats here: https://editor.citationstyles.org/about/
-# Hit download, store it in Tex/ folder, and change reference below - easy.
-bibliography: Tex/ref.bib       # Do not edit: Keep this naming convention and location.
-csl: Tex/harvard-stellenbosch-university.csl # referencing format used.
-# By default, the bibliography only displays the cited references. If you want to change this, you can comment out one of the following:
-#nocite: '@*' # Add all items in bibliography, whether cited or not
-# nocite: |  # add specific references that aren't cited
-#  @grinold2000
-#  @Someoneelse2010
-
-# ---------- General:
-RemovePreprintSubmittedTo: TRUE  # Removes the 'preprint submitted to...' at bottom of titlepage
-Journal: "Journal of Finance"   # Journal that the paper will be submitting to, if RemovePreprintSubmittedTo is set to TRUE.
-toc: FALSE                       # Add a table of contents
-numbersections: TRUE             # Should sections (and thus figures and tables) be numbered?
-fontsize: 11pt                  # Set fontsize
-linestretch: 1.2                # Set distance between lines.
-link-citations: TRUE            # This creates dynamic links to the papers in reference list.
-
-### Adding additional latex packages:
-# header-includes:
-#    - \usepackage{colortbl} # Add additional packages here.
-
+title: 'Question 3: Portfolio Construction'
+documentclass: elsarticle
+Thesis_FP: false
 output:
+  html_document:
+    df_print: paged
   pdf_document:
-    keep_tex: TRUE
+    keep_tex: true
     template: Tex/TexDefault.txt
-    fig_width: 3.5 # Adjust default figure sizes. This can also be done in the chunks of the text.
+    fig_width: 3.5
     fig_height: 3.5
-abstract: |
-  Abstract to be written here. The abstract should not be too long and should provide the reader with a good understanding what you are writing about. Academic papers are not like novels where you keep the reader in suspense. To be effective in getting others to read your paper, be as open and concise about your findings here as possible. Ideally, upon reading your abstract, the reader should feel he / she must read your paper in entirety.
+Author1: Vincent Reinshagen
+Ref1: Stellenbosch University
+Email1: 28736907@sun.ac.za
+addtoprule: true
+addfootrule: true
+margin: 2.3
+bottom: 2
+top: 2.5
+HardSet_layout: true
+linenumbers: false
+bibliography: Tex/ref.bib
+csl: "Tex/harvard-stellenbosch-university.csl"
+RemovePreprintSubmittedTo: true
+toc: false
+numbersections: true
+fontsize: 11pt
+linestretch: 1.2
+link-citations: true
+AddTitle: true
 ---
 
 <!-- First: Set your default preferences for chunk options: -->
@@ -108,6 +44,9 @@ knitr::opts_chunk$set(echo = FALSE, message = FALSE, warning = FALSE, fig.width 
 # Lets load in example data, and see how this can be stored and later called from your 'data' folder.
 if(!require("tidyverse")) install.packages("tidyverse")
 library(tidyverse)
+list.files('code/', full.names = T, recursive = T) %>% as.list() %>% walk(~source(.))
+library(tbl2xts)
+
 
 
 # Notice that as you are working in a .Rproj file (I am assuming you are) - the relative paths of your directories start at your specified root.
@@ -121,7 +60,7 @@ library(tidyverse)
 <!-- # Start Writing here: -->
 <!-- ############################## -->
 
-# Introduction \label{Introduction}
+
 
 
 ```{r}
@@ -135,7 +74,7 @@ library(tbl2xts)
 library(xts)
 ```
 
-Start of with performance difference between ALSI and SWIX
+The plot illustrates the cumulative returns of ALSI and SWIX over time. Although the ALSI exhibits some initial underperformance, it demonstrates a significant recovery and ultimately surpasses the SWIX, achieving notably higher returns in the long run.
 
 ```{r}
 rtn <- ALSI %>% select(date, Tickers, Return) %>% spread(Tickers, Return) %>% tbl_xts()
@@ -150,12 +89,12 @@ cum_returns(return_data = rtn,
 
 ```
 
-Look at performance of different caps
+To determine whether capitalization impacts returns and whether it should be considered in further analysis, the rolling performance is examined. The plot, however, does not provide a definitive conclusion, suggesting that there are no significant long-term performance differences across varying capitalizations.
 
 ```{r}
 
 
-ALSI_index_ret <- ALSI_sector(ALSI)
+ALSI_index_ret <- ALSI_index(ALSI)
 
 library(PerformanceAnalytics)
 chart.RollingPerformance(ALSI_index_ret, width = 252, legend.loc = 1)
@@ -163,49 +102,33 @@ chart.RollingPerformance(ALSI_index_ret, width = 252, legend.loc = 1)
 
 ```
 
-Look at distribution of sectors of SWIX and ALSI, we can see that ALSI lots of 
-resources
+To gain deeper insight into the differences between the ALSI and the SWIX, their sector exposures should be analyzed. The analysis reveals a clear distinction between the two indexes, with the ALSI assigning a significantly higher weight to resources compared to the SWIX.
 
 ```{r}
 sector_exp(ALSI)
 
 ```
 
-Lets look at stock concentration, we can see that the stock concentration is
-significantly higher for ALSI
+Another notable difference lies in stock concentration, with the top 10 stocks holding a significantly higher share in the ALSI compared to the SWIX.
 
 ```{r}
 stock_concentration(ALSI, 10)
 
 ```
 
-Cap weights
 
-The Capped_funds function allows us to see the impact of varying caps on different
-Funds.
+
+The Capped_funds function enables us to observe the impact of varying caps on different funds. The plot indicates that the return difference between ALSI and SWIX widens as caps increase. This suggests that the higher growth in the ALSI is driven by stocks with greater weight, aligning with the higher stock concentration observed in the previous analysis.
 
 ```{r}
 Capped_funds(
   ALSI = ALSI, 
   RebDays = RebDays, 
-  J203_cols = c("J203"), 
-  W_Cap_values = c(0.05, 0.10, 1)
+  J203_cols = c("J203", "J403"), 
+  W_Cap_values = c(0.05, 0.10)
 )
 ```
 
 
-\newpage
 
-# References {-}
-
-<div id="refs"></div>
-
-
-# Appendix {-}
-
-## Appendix A {-}
-
-Some appendix information here
-
-## Appendix B {-}
 
